<resources>
    <string name="app_name">NeWork</string>
    <string name="login">Login</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="chooser_share_post">Share post</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="password">Password</string>
    <string name="sign_in_dialog">Authorization is required. To create a post, log in or register</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="authentication">Authentication</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat password</string>
    <string name="dialog_signOut">Are you sure?</string>
    <string name="description_photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="registration">Registration</string>
    <string name="password_cannot_be_empty">Password cannot be empty</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="post">Post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="empty_events">There are no events.\nIf you create a new event, it will appear here</string>
    <string name="empty_jobs">There are no jobs.\nIf you create a new job, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="date_pattern" translatable="false">dd.MM.yy HH:mm</string>
    <string name="likers">Likers</string>
    <string name="save">Save</string>
    <string name="mentioned">Mentioned</string>
    <string name="new_post">New post</string>
    <string name="choose_users">Choose users</string>
    <string name="attachment_shouldn_t_excess_15mb">Attachment shouldn\'t excess 15Mb</string>
    <string name="event">Event</string>
    <string name="new_event">New event</string>
    <string name="share">Share</string>
    <string name="participants">Participants</string>
    <string name="speakers">Speakers</string>
    <string name="mm_dd_yyyy_hh_mm" translatable="false">MM/dd/yyyy HH:mm</string>
    <string name="date">Date</string>
    <string name="online" translatable="false">Online</string>
    <string name="offline" translatable="false">Offline</string>
    <string name="type">Type</string>
    <string name="my_profile">My profile</string>
    <string name="position">Position</string>
    <string name="link">Link</string>
    <string name="create">Create</string>
    <string name="mm_dd_yyyy" translatable="false">mm/dd/yyyy</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="new_posts">New posts</string>
    <string name="new_events">New events</string>
    <string name="plus" translatable="false">+</string>
    <string name="select_date">Select date</string>
    <string name="enter_dates">Enter dates</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="select_dates">Select dates</string>
    <string name="avatar">Avatar</string>
    <string name="attachment">Attachment</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="play">Play</string>
    <string name="user_already_exists">User already exists</string>
    <string name="wrong_format_of_photo">Wrong format of photo</string>
    <string name="task_cancelled">Task cancelled</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="user_wall">User wall</string>
    <string name="new_job">New job</string>
    <string name="looking_for_a_job">looking for a job</string>
</resources>