<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginStart="@dimen/common_spacing"
            android:layout_marginEnd="@dimen/common_spacing"
            app:helperTextEnabled="true"
            app:helperText="@string/mm_dd_yyyy_hh_mm"
            android:hint="@string/date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_weight="100"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_input"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:clickable="true"
                android:focusable="false"
                style="@style/HeaderText" />

        </com.google.android.material.textfield.TextInputLayout>
        <ImageButton
            android:id="@+id/date_picker"
            android:layout_width="@dimen/icon_button_min_size"
            android:layout_height="@dimen/icon_button_min_size"
            android:layout_marginTop="9dp"
            android:background="@drawable/trailing_icon"
            app:layout_constraintTop_toTopOf="@id/date_layout"
            app:layout_constraintEnd_toEndOf="@id/date_layout"
            android:importantForAccessibility="no" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/common_spacing"
        style="@style/SubheaderText"
        android:text="@string/type"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        >
        <RadioButton
            android:id="@+id/online"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/common_spacing"
            android:paddingEnd="@dimen/common_spacing"
            android:text="@string/online"
            android:checked="true"
            style="@style/RadioButton" />
        <RadioButton
            android:id="@+id/offline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/common_spacing"
            android:paddingEnd="@dimen/common_spacing"
            android:text="@string/offline"
            style="@style/RadioButton" />
    </RadioGroup>
</LinearLayout>