<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.auth.SignInFragment">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:gravity="center">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:hint="@string/login"
            android:layout_marginStart="@dimen/sign_margin"
            android:layout_marginEnd="@dimen/sign_margin"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/primary"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pass_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginStart="@dimen/sign_margin"
            android:layout_marginEnd="@dimen/sign_margin"
            app:passwordToggleEnabled="true"
            app:boxStrokeWidth="1dp"
            app:boxStrokeColor="@color/primary"
            app:errorEnabled="true"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="56dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:enabled="false"
            android:layout_marginTop="@dimen/common_spacing"
            android:layout_marginStart="@dimen/sign_margin"
            android:layout_marginEnd="@dimen/sign_margin"
            android:text="@string/login"
            android:textAllCaps="false"
            app:cornerRadius="100dp"
            >

        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_register"
            android:textAllCaps="false"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>